--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
         <a href="{{ site.baseurl }}/index.html">Home</a> |
         <a href="{{ site.baseurl }}/pages/background.html">Background</a> |
         <a href="{{ site.baseurl }}/pages/sources.html">Sources</a> |
-        <a href="{{ site.baseurl }}/pages/Process & Problems.html">Process & Problems</a> |
+        <a href="{{ site.baseurl }}/pages/Workflow.html">Workflow</a> |
         <a href="{{ site.baseurl }}/pages/analysis.html">Data Analysis</a> |
         <a href="{{ site.baseurl }}/pages/reflections.html">Reflections</a> |
         <a href="{{ site.baseurl }}/pages/bibliography.html">Bibliography</a> |
